Pierwsze spojrzenie na zadanka z wizualizacji

--- a/Ćwiczenia 3/Lab - Wizualizacja.ipynb
+++ b/Ćwiczenia 3/Lab - Wizualizacja.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x21a2371b550>]"
+       "[<matplotlib.lines.Line2D at 0x1ac3395a280>]"
       ]
      },
      "execution_count": 1,
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21a23fa56d0>"
+       "<matplotlib.legend.Legend at 0x1ac2f1cd820>"
       ]
      },
      "execution_count": 2,
@@ -519,7 +519,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x21a26b63cd0>"
+       "<seaborn.axisgrid.PairGrid at 0x1ac36d708e0>"
       ]
      },
      "execution_count": 13,
