Koniec wizualizacji i prawie regresji

--- a/Ćwiczenia 3/Lab - Regresja Liniowa.ipynb
+++ b/Ćwiczenia 3/Lab - Regresja Liniowa.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6cdd1d4e-997d-40fe-9593-535a3fd6f826",
    "metadata": {},
    "outputs": [
@@ -2032,6 +2032,230 @@
     "fitted_wiel_model = wiel_model.fit()\n",
     "\n",
     "fitted_wiel_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zadanie 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -122.23     37.88                41.0        880.0           129.0   \n",
+       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
+       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
+       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
+       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
+       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "house = pd.read_csv(\"housing.csv\")\n",
+    "house.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+      "290      -122.16     37.77                47.0       1256.0             NaN   \n",
+      "341      -122.17     37.75                38.0        992.0             NaN   \n",
+      "538      -122.28     37.78                29.0       5154.0             NaN   \n",
+      "563      -122.24     37.75                45.0        891.0             NaN   \n",
+      "696      -122.10     37.69                41.0        746.0             NaN   \n",
+      "...          ...       ...                 ...          ...             ...   \n",
+      "20267    -119.19     34.20                18.0       3620.0             NaN   \n",
+      "20268    -119.18     34.19                19.0       2393.0             NaN   \n",
+      "20372    -118.88     34.17                15.0       4260.0             NaN   \n",
+      "20460    -118.75     34.29                17.0       5512.0             NaN   \n",
+      "20484    -118.72     34.28                17.0       3051.0             NaN   \n",
+      "\n",
+      "       population  households  median_income  median_house_value  \\\n",
+      "290         570.0       218.0         4.3750            161900.0   \n",
+      "341         732.0       259.0         1.6196             85100.0   \n",
+      "538        3741.0      1273.0         2.5762            173400.0   \n",
+      "563         384.0       146.0         4.9489            247100.0   \n",
+      "696         387.0       161.0         3.9063            178400.0   \n",
+      "...           ...         ...            ...                 ...   \n",
+      "20267      3171.0       779.0         3.3409            220500.0   \n",
+      "20268      1938.0       762.0         1.6953            167400.0   \n",
+      "20372      1701.0       669.0         5.1033            410700.0   \n",
+      "20460      2734.0       814.0         6.6073            258100.0   \n",
+      "20484      1705.0       495.0         5.7376            218600.0   \n",
+      "\n",
+      "      ocean_proximity  \n",
+      "290          NEAR BAY  \n",
+      "341          NEAR BAY  \n",
+      "538          NEAR BAY  \n",
+      "563          NEAR BAY  \n",
+      "696          NEAR BAY  \n",
+      "...               ...  \n",
+      "20267      NEAR OCEAN  \n",
+      "20268      NEAR OCEAN  \n",
+      "20372       <1H OCEAN  \n",
+      "20460       <1H OCEAN  \n",
+      "20484       <1H OCEAN  \n",
+      "\n",
+      "[207 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_rows = house[house.isnull().any(axis=1)]\n",
+    "print(missing_rows)\n",
+    "#usunięcie ich\n",
+    "house2=house.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20640\n",
+      "20433\n",
+      "Empty DataFrame\n",
+      "Columns: [longitude, latitude, housing_median_age, total_rooms, total_bedrooms, population, households, median_income, median_house_value, ocean_proximity]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(house.shape[0])\n",
+    "print(house2.shape[0])\n",
+    "missing_rows2 = house2[house2.isnull().any(axis=1)]\n",
+    "print(missing_rows2)"
    ]
   }
  ],
