--- a/Ćwiczenia 4/Lab - Klasyfikacja.ipynb
+++ b/Ćwiczenia 4/Lab - Klasyfikacja.ipynb
@@ -932,89 +932,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for k= 1  is equal to  0.9230769230769231\n",
-      "Accuracy for k= 2  is equal to  0.9230769230769231\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for k= 3  is equal to  0.9340659340659341\n",
-      "Accuracy for k= 4  is equal to  0.9340659340659341\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for k= 5  is equal to  0.9340659340659341\n",
-      "Accuracy for k= 6  is equal to  0.945054945054945\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for k= 7  is equal to  0.9340659340659341\n",
-      "Accuracy for k= 8  is equal to  0.9340659340659341\n",
-      "Accuracy for k= 9  is equal to  0.9340659340659341\n",
-      "Najlepsza wartość dokładności jest dla k=  6 i wynosi 0.945054945054945\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\micha\\anaconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
+     "ename": "NameError",
+     "evalue": "name 'df3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\micha\\Nauka\\StudiaPJAKT\\Semestr1\\Eksploracja_i_Wizualizacja_Danych\\Eksploracja-i-Wizualizacja-Danych\\Ćwiczenia 4\\Lab - Klasyfikacja.ipynb Cell 24\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/micha/Nauka/StudiaPJAKT/Semestr1/Eksploracja_i_Wizualizacja_Danych/Eksploracja-i-Wizualizacja-Danych/%C4%86wiczenia%204/Lab%20-%20Klasyfikacja.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m accuracy_score\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/micha/Nauka/StudiaPJAKT/Semestr1/Eksploracja_i_Wizualizacja_Danych/Eksploracja-i-Wizualizacja-Danych/%C4%86wiczenia%204/Lab%20-%20Klasyfikacja.ipynb#X32sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m y \u001b[39m=\u001b[39m df3\u001b[39m.\u001b[39mdiagnosis\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/micha/Nauka/StudiaPJAKT/Semestr1/Eksploracja_i_Wizualizacja_Danych/Eksploracja-i-Wizualizacja-Danych/%C4%86wiczenia%204/Lab%20-%20Klasyfikacja.ipynb#X32sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X \u001b[39m=\u001b[39m df3\u001b[39m.\u001b[39mdrop(columns\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mdiagnosis\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/micha/Nauka/StudiaPJAKT/Semestr1/Eksploracja_i_Wizualizacja_Danych/Eksploracja-i-Wizualizacja-Danych/%C4%86wiczenia%204/Lab%20-%20Klasyfikacja.ipynb#X32sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, test_size\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df3' is not defined"
      ]
     }
    ],
@@ -1028,7 +957,7 @@
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2)  #0.8*0.2 = 0.16\n",
     "\n",
     "accuracy = []\n",
-    "for i in range(1,10):\n",
+    "for i in range(1,50):\n",
     "    knn = KNeighborsClassifier(n_neighbors=i)\n",
     "    knn.fit(X_train, y_train)\n",
     "\n",
