Projekt cz1 Dane

--- a/Projekt_koncowy/Prezentacja/Prezentacja_EWD.tex
+++ b/Projekt_koncowy/Prezentacja/Prezentacja_EWD.tex
@@ -32,7 +32,7 @@
 \begin{frame}
 	\frametitle{Dane}
 Do projektu wykorzystam dane NBA 2023 Player Shot Dataset dostępne pod linkiem: 
-\textit{\url{https://www.kaggle.com/datasets/dhavalrupapara/nba-2023-player-shot-dataset/?select=2_james_harden_shot_chart_2023.csv}}. Zawierają one informacje na temat sytuacji rzutowych trzech koszykarzy grających w \textbf{NBA}.
+\textit{\url{https://www.kaggle.com/datasets/dhavalrupapara/nba-2023-player-shot-dataset/?select=2_james_harden_shot_chart_2023.csv}}. Zawierają one informacje na temat sytuacji rzutowych trzech koszykarzy występujących w \textbf{NBA}.
 \end{frame}
 
 	\subsection{Wstępna ocena danych}
