--- a/Ćwiczenia 5/Lab - Klasyfikacja (dodatkowe zadania).ipynb
+++ b/Ćwiczenia 5/Lab - Klasyfikacja (dodatkowe zadania).ipynb
@@ -779,14 +779,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Wczytaj zbiór `boston.csv`. Przewiduj wartość `medv` na podstawie pozostałych zmiennych.\n",
-    "    - Podziel dane na zbiór testowy i treningowy.\n",
-    "    - Stwórz model [`DecisionTreeRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html). Użyj walidacji krzyżowej do ewaluacji modelu.\n",
-    "    - Zmniejsz rozmiar drzewa stosując 'przycinanie' (pruning). Wygeneruj wartości `ccp_alpha` metodą `cost_complexity_pruning_path()`. Następnie użyj [`GridSearchCV`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html), aby znaleźć najlepszą. \n",
-    "    - Porównaj modele przed i po przycinaniu. Jak wpłynęło na jakość predykcji? Jak zmienił się rozmiar drzewa (sprawdź metodami `get_depth()`, `get_n_leaves()`)?\n",
-    "    - Sprawdź jaki wpływ na jakość predykcji ma regulowanie rozmiaru drzewa, np. parametrami `max_depth`, `max_leaf_nodes`.\n",
-    "    - Stwórz model [`RandomForestRegressor`](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html) i porównaj go z wcześniej tworzonymi modelami.\n",
-    "    - Wybierz najlepsze ze stworzonych drzew decyzyjnych, biorąc pod uwagę zarówno jakość predykcji, jak i rozmiar drzewa. Wizualizuj drzewo metodą [`plot_tree()`](https://scikit-learn.org/stable/modules/generated/sklearn.tree.plot_tree.html). Dokonaj ewaluacji korzystając ze zbioru testowego."
+    "2. Dla zbiorów z Zadania 1, użyj walidacji krzyżowej aby dobrać najlepszą wartośc parametru `n_neighbors` dla `KNeighborsClassifier`.\n",
+    "    - Proces można zaimplementować manualnie (np. w pętli), lub użyć [`GridSearchCV`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html).\n",
+    "    - Stwórz wykres pokazujący zależność średniej dokładności od `n_neighbors`.\n",
+    "    - Po wyborze najlepszego modelu, trenuj go za pomocą całego zbioru treningowego. Użyj wydzielonego wcześniej zbioru testowego aby ewaluować model (podaj dokładność i inne miary)."
    ]
   },
   {
