--- a/Projekt_koncowy/Projekt.ipynb
+++ b/Projekt_koncowy/Projekt.ipynb
@@ -680,7 +680,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Klasyfikacja wydaje się możliwa, mamy dwie zmienne numeryczne odpowiadające za pozycję zawodnika oddajacego rzut w przestrzeni, oraz jedną klasyfikującą, która ma dwie wartości. Z powyższych wykresów widać, że klasy są rozdzielne (co dało się przewidzieć na początku)"
+    "Klasyfikacja wydaje się możliwa, mamy dwie zmienne numeryczne odpowiadające za pozycję zawodnika oddajacego rzut w przestrzeni, oraz jedną klasyfikującą, która ma dwie wartości. Z powyższych wykresów widać, że klasy są rozdzielne (co dało się przewidzieć na początku)\n",
+    "\n",
+    "K--means nie zadziała przez to, że centroid zbioru 3 znajduje się w środku zbioru 2"
    ]
   },
   {
