--- a/Ćwiczenia 5/Lab - Drzewa.ipynb
+++ b/Ćwiczenia 5/Lab - Drzewa.ipynb
@@ -38818,7 +38818,7 @@
    "source": [
     "print(\"Głębokość dla początkowego drzewa to\", Tree.get_depth())\n",
     "\n",
-    "#print(\"Głębokość dla wybranego przez GridSearch drzewa to\", GridTree.get_depth()) tego nie umiem zrobić\n",
+    "print(\"Głębokość dla wybranego przez GridSearch drzewa to\", GridTree.best_estimator_.get_depth())# tego nie umiem zrobić\n",
     "\n",
     "print(\"Ilość liści dla początkowego drzewa to\", Tree.get_n_leaves())\n",
     "\n",
