--- a/Ćwiczenia 6/Lab - PCA, Grupowanie.ipynb
+++ b/Ćwiczenia 6/Lab - PCA, Grupowanie.ipynb
@@ -282,6 +282,7 @@
     }
    ],
    "source": [
+    "#manualnie to znaleźć\n",
     "pca = PCA(n_components=5)\n",
     "X_pc = pca.fit_transform(X)\n",
     "loadings = pd.DataFrame(pca.components_.T, columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'], index=mnist.data.columns) # Za dużo komponentów\n",
